--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 :root {
-  --primary: #e79646;
+  --primary: #fc9700;
   --secondary: #ee4610;
   --bg: #faeaea;
   --text: #010101;
-  
 }
 
 * {
@@ -21,6 +20,7 @@ html {
 }
 
 body {
+  font-size: 20px;
   font-family: 'ubuntu', Sans-Serif;
   color: var(--text);
   background-color: var(--bg);
@@ -32,7 +32,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgba(250,234,234,.8);
+  background-color: rgba(250,234,234,.9);
   padding: 1.4rem 7%;
   position: fixed;
   top: 0;
@@ -159,22 +159,26 @@ body {
 }
 
 /* ------- sale section ------- */
-.img {
-  position: absolute;
-  left: 73rem;
-  top: 50rem;
-}
 
-.img img {
-  width: 5rem;
-}
+
 
 .sale {
+  position: relative;
   padding: 50px;
   border: 2px solid var(--secondary);
   border-radius: 10px;
   margin: 10rem 7%;
   text-align: center;
+}
+
+.sale .img {
+  position: absolute;
+  top: -8.5rem;
+  right: 2rem;
+  width: 5rem;
+}
+.sale .img img {
+  width: 5rem;
 }
 
 .sale h2 {
@@ -232,7 +236,7 @@ body {
   text-align: left;
   border: 2px solid var(--secondary);
   border-radius: 10px;
-  width: 30%;
+  width: 32%;
   padding: 20px;
   margin: 20px;
 }
@@ -241,7 +245,7 @@ body {
 .benefits .benefits-content .benefit-dua h1, 
 .benefits .benefits-content .benefit-tiga h1, 
 .benefits .benefits-content .benefit-empat h1 {
-  font-size: 2rem;
+  font-size: 2.2rem;
   color: var(--primary);
   margin-bottom: 20px;
 }
@@ -293,7 +297,7 @@ body {
   margin-bottom: 10px;
 }
 
-/* product section */
+/* -------product section------- */
 .product {
   padding: 0 7%;
   margin: 10rem 0 0 0;
@@ -316,42 +320,225 @@ body {
 
 .product .hot-sales .hot-sales-1 .hot-sales-image, 
 .product .hot-sales .hot-sales-2 .hot-sales-image {  
-  bottom: 10rem;
-  left: 1rem;
+  bottom: 20rem;
+  left: 4rem;
   position: absolute;
 }
 .product .hot-sales .hot-sales-1 .hot-sales-image img, 
 .product .hot-sales .hot-sales-2 .hot-sales-image img {
-  width: 12rem;
+  width: 15rem;
 }
 
 .product .hot-sales .hot-sales-1 .hot-sales-content, 
 .product .hot-sales .hot-sales-2 .hot-sales-content {
-  background-color: var(--primary);
+  background: rgb(249,188,0);
+background: radial-gradient(circle, rgba(249,188,0,1) 0%, rgba(252,151,0,1) 100%);
   margin: 20rem 0 0 0;
-  padding: 7rem 1rem 0 1rem;
-  border-radius: 10px;
-  width: 15rem;
-  height: 16rem;
+  padding: 10rem 1rem 0 1rem;
+  border-radius: 20px;
+  width: 25rem;
+  height: 28rem;
 }
 
 .product .hot-sales .hot-sales-1 .hot-sales-content p, 
 .product .hot-sales .hot-sales-2 .hot-sales-content p {
   text-align: center;
   color: #fff;
-  font-size: 1.4rem;
-  margin-bottom: 2rem;
+  width: 70%;
+  font-size: 2rem;
+  margin: 0 auto 2rem;
   font-weight: 700;
 }
+
+.product .hot-sales .hot-sales-1 .hot-sales-content .price, 
+.product .hot-sales .hot-sales-2 .hot-sales-content .price {
+  text-align: center;
+  color: #fff;
+  font-size: 2rem;
+  margin: 0 auto 0;
+  font-weight: 700;
+}
+
+.product .hot-sales .hot-sales-1 .hot-sales-content .disc, 
+.product .hot-sales .hot-sales-2 .hot-sales-content .disc {
+  text-align: center;
+  color: #fff;
+  font-size: 1.2rem;
+  margin: 0 auto 2rem;
+  font-weight: 700;
+  text-decoration: line-through;
+}
+
 .product .hot-sales .hot-sales-1 .hot-sales-content a, 
 .product .hot-sales .hot-sales-2 .hot-sales-content a {
   background-color: var(--secondary);
   color: #fff;
   display: block;
+  margin: 0 auto;
+  width: 11rem;
   text-align: center;
   padding: 10px 20px;
   border-radius: 5px;
 }
+
+.product .more-button {
+  display: flex;
+  justify-content: center;
+  margin: 5rem auto;
+  background-color: var(--primary);
+  padding: 10px 0;
+  color: #fff;
+  border-radius: 5px;
+  width: 15rem;
+}
+
+/* ------- Gallery Section ------- */
+.gallery {
+  border-radius: 5px;
+  position: relative;
+  width: 80%;
+  margin: 5rem auto;
+  overflow: hidden;
+}
+
+.gallery h1 {
+  text-align: center;
+  font-size: 2.5rem;
+  padding: 5rem 0;
+}
+
+.slider {
+  display: flex;
+  padding: 0;
+  width: 100%;
+  transition: transform 0.5s ease;
+}
+
+.slide {
+  width: 100%;
+  flex: 0 0 auto;
+}
+
+.prev,
+.next {
+  position: absolute;
+  font-size: 1.5rem;
+  top: 60%;
+  transform: translateY(-50%);
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  border: none;
+  cursor: pointer;
+  padding: 15px;
+  z-index: 1;
+}
+
+.prev {
+  left: 0;
+}
+
+.next {
+  right: 0;
+}
+
+.slide-dots {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.dot {
+  height: 10px;
+  width: 10px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  margin: 0 5px;
+  cursor: pointer;
+}
+
+.active {
+  background-color: #717171;
+}
+
+/* footer section */
+.footer {
+    background-color: var(--primary);
+    color: #fff;
+    padding: 40px 0 0 0;
+}
+
+.container {
+    width: 80%;
+    margin: auto;
+    overflow: auto;
+}
+
+.footer-content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.footer-section {
+    flex-basis: 30%;
+    padding: 20px;
+}
+
+.footer-section h2 {
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+.footer-section p {
+  padding-bottom: 10px;
+}
+
+.contact a {
+  display: block;
+  color: white;
+}
+
+.links {
+  padding-bottom: 10px;
+}
+
+.links ul {
+    list-style: none;
+    padding: 0;
+}
+
+.links li {
+    margin-bottom: 10px;
+}
+
+.links a {
+    color: #fff;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.links a:hover {
+    color: #ffd700;
+}
+
+.social-links a {
+    color: #fff;
+    text-decoration: none;
+    margin-right: 10px;
+    font-size: 18px;
+}
+
+.social-links a:hover {
+    color: #ffd700;
+}
+
+.footer-bottom {
+    background-color: #b26b00;
+    padding: 10px 0;
+    text-align: center;
+    font-size: 14px;
+}
+
 
 
 
